--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 :root {
   --main-font: 'Orbitron', sans-serif;
+  --calculator-background-color: #696969;
+  --calculator-height: 72%;
+  --calculator-width: 36%;
+}
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --calculator-height: 100%;
+    --calculator-width: 100%;
+  }
 }
 
 body, div, p {
