--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,19 @@
   --calculator-background-color: #696969;
   --calculator-height: 72%;
   --calculator-width: 36%;
+  --display-background-color: #1d1f1f;
+  --display-text-color: #23e000;
+  --display-text-size: 4em;
+  --display-text-weight: 400;
+  --display-height: 24%;
+  --display-width: 92%;
 }
 
 @media screen and (max-width: 1024px) {
   :root {
     --calculator-height: 100%;
     --calculator-width: 100%;
+    --display-text-size: 10em;
   }
 }
 
