--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
   --display-text-weight: 400;
   --display-height: 24%;
   --display-width: 92%;
+  --keypad-height: 72%;
+  --keypad-width: 96%;
 }
 
 @media screen and (max-width: 1024px) {
